Bug 291236 - Home Page thumbs don't restore after clearing history
Summary: Home Page thumbs don't restore after clearing history
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: openSUSE Linux
: NOR normal
Target Milestone: 0.10
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-11 02:22 UTC by sahinsureyya
Modified: 2012-05-23 23:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sahinsureyya 2012-01-11 02:22:41 UTC
Version:           latest git snapshot (using KDE 4.7.4) 
OS:                Linux

After deleting all the items from the Tools -> Clear Private Data... menu item, the home page thumbs in the favorites part of the new tab page do not restore.

Reproducible: Always

Steps to Reproduce:
Clear your history by using the "Clear Private Data..." menu item with all items (including the home thumbs) are checked. Then close Rekonq and open Rekonq.

Actual Results:  
The Home Page Thumbs in the Favorites part of the new tab page are not restoring. Instead of thumbs of the favorite websites, I see empty frames with a small logo in the center. 

Expected Results:  
I would expect Rekonq to restore the thumbs of my favorite websites as in its previous versions.
Comment 1 Andrea Diamantini 2012-02-02 16:02:24 UTC
Discussed here: http://mail.kde.org/pipermail/rekonq/2012-January/003658.html
Comment 2 Andrea Diamantini 2012-05-10 23:13:41 UTC
You will have a button to update them when you want. ok?
Comment 3 sahinsureyya 2012-05-11 12:07:12 UTC
I guess the button would work fine, although I was considering 
perhaps something like what opera 11.6 series do to restore 
home page thumbs, I had the impression that opera downloads 
minimally for restoring and the home page thumbs look quite 
functional and aesthetic (you just see the website logos 
instead of the whole website snapshots). I may be wrong 
though, I have very little to no experience with internet 
programming.
Comment 4 Andrea Diamantini 2012-05-23 23:11:15 UTC
Git commit ff01aab13b1f68bd1f5983117ccdfe7771d49675 by Andrea Diamantini.
Committed on 10/05/2012 at 09:26.
Pushed by adjam into branch 'master'.

move left modify action in favorites to be the update one

Also implement ThumbUpdater class to easily manage thumb updates

M  +1    -0    src/CMakeLists.txt
M  +3    -62   src/newtabpage.cpp
A  +81   -0    src/thumbupdater.cpp     [License: GPL (v2/3)]
A  +58   -0    src/thumbupdater.h     [License: GPL (v2/3)]

http://commits.kde.org/rekonq/ff01aab13b1f68bd1f5983117ccdfe7771d49675