move left modify action in favorites to be the update one

Also implement ThumbUpdater class to easily manage thumb updates

BUG:291236